# GenAI-Empowered-Personal-Assistant

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
notebooks/: GoogleCalendarReader.ipynb  WebSearch.ipynb
src/: main.py
