[project]
name = "genai-empowered-personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.4.3",
    "gradio>=5.38.2",
    "langchain-google-community[calendar]>=2.0.7",
    "llama-index-readers-google>=0.6.2.post1",
    "strands-agents[ollama]>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pylint>=3.3.7",
]
